<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookInventory</string>
    <string name="selectBook">Select the desired book:</string>
    <string name="searching">Searching...</string>
    <string name="saving">Saving...</string>
    <string name="notFound">Book not found</string>
    <string name="addManually">Do you want to add the book manually?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="author">Author:    </string>
    <string name="title">Title:   </string>
    <string name="year">Year:       </string>
    <string name="barcode">Barcode: </string>
    <string name="category">Category:</string>
    <string name="noBook">You don\'t have books here.</string>
    <string name="confirm">Confirm Selection</string>
    <string name="none">None of the above</string>
    <string name="cover">Cover:</string>
    <string name="yes">Yes</string>
    <string name="lendInformation">Lend Information</string>
    <string name="borrowedInformation">Borrowed Information</string>
    <string name="no">No</string>
     <string name="sucessullyDeleted">The book was deleted</string>
    <string name="confirmDeletion">Do you want to delete this book?</string>
    <string name="lentTo">Lent to:</string>
    <string name="date">Date:</string>
    <string name="borrowedFrom">Borrowed from:</string>
    <string name="searchMore">Search more</string>
    <string name="moreInfo">More Info</string>
    <string name="close">Close</string>    
</resources>
