<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="match_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:id="@+id/addNewCoverInfoTV" android:text="@string/cover"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />
				<ImageView android:id="@+id/addNewBookCover"
					android:layout_width="fill_parent" android:layout_height="wrap_content" />

			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:id="@+id/addNewTitleInfoTV"
					android:layout_height="wrap_content" android:layout_width="64dp"
					android:text="@string/title" />
				<EditText android:id="@+id/addNewTitleInfoRecovered"
					android:layout_height="wrap_content" android:layout_weight="1"
					android:layout_width="match_parent" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:id="@+id/addNewAuthorInfoTV" android:text="@string/author"
					android:layout_height="wrap_content" android:layout_width="wrap_content" />
				<EditText android:id="@+id/addNewAuthorInfoRecovered"
					android:layout_height="wrap_content"
					android:layout_width="match_parent" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:id="@+id/addNewBarcodeInfoTV" android:text="@string/barcode"
					android:layout_height="wrap_content" android:layout_width="wrap_content" />
				<EditText android:id="@+id/addNewBarcodeInfoRecovered"
					android:layout_height="wrap_content"
					android:layout_width="match_parent" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:orientation="horizontal" android:layout_height="wrap_content">
				<TextView android:id="@+id/addNewYearInfoTV" android:text="@string/year"
					android:layout_height="wrap_content" android:layout_width="70dp" />
				<EditText android:id="@+id/addNewYearInfoRecovered"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<TextView android:id="@+id/addNewCategorInfoTV" android:text="@string/category"
					android:layout_height="wrap_content" android:layout_width="wrap_content" />
				<Spinner android:id="@+id/addNewCategorySpinner"
					android:layout_height="wrap_content" android:drawSelectorOnTop="true"
					android:layout_width="wrap_content" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal">
				<LinearLayout android:id="@+id/linearLayout1"
					android:layout_height="match_parent" android:orientation="vertical"
					android:layout_weight="1" android:layout_width="0dp"></LinearLayout>
				<Button android:id="@+id/addNewsaveBook" android:layout_height="wrap_content"
					android:text="@string/save" android:layout_x="65px" android:layout_width="70px"
					android:layout_weight="1" />
				<LinearLayout android:id="@+id/linearLayout2"
					android:layout_height="match_parent" android:orientation="vertical"
					android:layout_weight="1" android:layout_width="0dp"></LinearLayout>
				<Button android:id="@+id/addNewcancelBook" android:layout_height="wrap_content"
					android:text="@string/cancel" android:layout_x="125px"
					android:layout_width="70px" android:layout_weight="1" />
				<LinearLayout android:id="@+id/linearLayout3"
					android:layout_height="match_parent" android:orientation="vertical"
					android:layout_weight="1" android:layout_width="0dp"></LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>

