<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:orientation="vertical" android:layout_height="wrap_content">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/linearLayout5">
			<TextView android:layout_width="wrap_content" android:id="@+id/lentTo"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/lentTo" android:layout_height="wrap_content"></TextView>
			<EditText android:id="@+id/lentToEdit"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:imeOptions="actionDone">
				<requestFocus></requestFocus>
			</EditText>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/linearLayout6">
			<TextView android:layout_width="wrap_content" android:id="@+id/date"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/date" android:layout_height="wrap_content"></TextView>
			<DatePicker android:id="@+id/datePicker1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
		</LinearLayout>
	</LinearLayout>



	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout android:layout_height="match_parent"
			android:orientation="vertical" android:layout_weight="1"
			android:layout_width="0dp"></LinearLayout>
		<Button android:id="@+id/saveLent" android:layout_height="wrap_content"
			android:text="@string/save" android:layout_x="65px"
			android:layout_width="70px" android:layout_weight="1" />
		<LinearLayout android:layout_height="match_parent"
			android:orientation="vertical" android:layout_weight="1"
			android:layout_width="0dp"></LinearLayout>
	</LinearLayout>
</LinearLayout>

