<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout4"
		android:orientation="vertical" android:layout_weight="1">
		<LinearLayout android:layout_width="match_parent"
			android:id="@+id/linearLayout1" android:layout_height="0dp"
			android:layout_weight="1">
			<TextView android:layout_width="wrap_content" android:id="@+id/textView1"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/lentTo" android:layout_height="wrap_content"></TextView>
			<EditText android:layout_width="wrap_content"
				android:id="@+id/lentToLentMoreInfoDialog" android:layout_weight="1"
				android:layout_height="wrap_content" android:cursorVisible="false"
				android:editable="false"></EditText>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
			android:id="@+id/linearLayout2" android:layout_height="0dp"
			android:layout_weight="1">
			<TextView android:layout_width="wrap_content" android:id="@+id/textView2"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/date" android:layout_height="wrap_content"></TextView>
			<EditText android:layout_width="wrap_content" android:id="@+id/dateLentMoreInfoDialog"
				android:inputType="date" android:layout_weight="1"
				android:layout_height="wrap_content" android:cursorVisible="false"
				android:editable="false">
				<requestFocus></requestFocus>
			</EditText>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_weight="1">
		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_height="match_parent" android:orientation="vertical"
			android:layout_weight="1" android:layout_width="wrap_content"></LinearLayout>
		<Button android:layout_height="wrap_content"
			android:layout_weight="1" android:id="@+id/cancelLentMoreInfoDialog"
			android:text="@string/close" android:layout_width="wrap_content"></Button>
		<LinearLayout android:id="@+id/linearLayout3"
			android:layout_height="match_parent" android:orientation="vertical"
			android:layout_weight="1" android:layout_width="wrap_content"></LinearLayout>
	</LinearLayout>


</LinearLayout>
